--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,8 @@ navbar:
 #      href: stuff.html
     - text: "10T"
       href: 10T.html
+    - text: "More 10T"
+      href: more10T.html
     - text: "About"
       href: about.html
 output_dir: "."
